--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 title: Sara Murray
 
 # Short description of your site
-description: A Candypunk lives here
+description: candypunk
 
 # --- Navigation bar options --- #
 
@@ -63,7 +63,7 @@ author:
   twitter: magicalraccoon   # eg. daattali
 #  reddit: yourname    # eg. daattali
 #  google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-#  linkedin: yourname  # eg. daattali
+  linkedin: sara-m  # eg. daattali
 #  xing: yourname      # eg. daattali
 #  stackoverflow: yourlink  # eg. "3943160/daattali"
 #  snapchat: yourname  # eg. daattali
@@ -84,7 +84,7 @@ footer-links-active:
   google-plus: false
   github: true
   reddit: false
-  linkedin: false
+  linkedin: true
   xing: false
   stackoverflow: false
   snapchat: false
