--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ navbar-links:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
 #    - Learn markdown: "http://www.markdowntutorial.com/"
 #    - GitHub Pages: "https://pages.github.com/"
-  Github: "https://github.com/magicalraccoon/"
+  🔗 Github: "https://github.com/magicalraccoon/"
   Resume: "resume"
 
 # Image to show in the navigation bar - image must be a square (width = height)
