--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 # --- General options --- #
 
+keep_files: [
+  '.well-known/acme-challenge'
+]
+
 # url is the full website URL
 # baseurl is the website's URL without the hostname
 
